# fastapi_sample

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  rec.py
docker/server/: Dockerfile
