[tool.poetry]
name = "fastapi_sample"
version = "0.1.0"
description = "Sample App to try FastAPI"
authors = ["Seiya Sasaki <sirukufarios@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
